# AOC2024

./: CMakeLists.txt  README.md
src/: day1.5.c  day1.c  day2.5.c  day2.c  day3.5.c  day3.c  hello.c  print_utils.h  utils.h  vec_utils.h
